# csv-generator

./: Cargo.toml
data/: 1000.csv  1000.json  10000.json  EU-10.csv  EU-10.tsv  EU-10000.csv  EU-10000.tsv  US-10.csv  US-10000.csv
src/: main.rs
