[package]
name = "csv-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.25", features = ["serde"] }
csv = "1.2.1"
fake = { version = "2.6", features=['derive', "chrono"]}
rand = "0.8"
serde = { version = "1.0.163", features = ["derive"] }
